20241128 新增排序按鈕

--- a/search_detail.htm
+++ b/search_detail.htm
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>台灣藥物法規資訊網</title>
+    <title>藥品成分公告查詢系統</title>
     <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries [if lt IE 9]>
         <script src="js/html5shiv.js"></script>
         <script src="js/respond.min.js"></script>
@@ -232,9 +232,21 @@
                 </caption> -->
                   <thead>
                     <tr>
-                      <th>日期</th>
-                      <th>文號</th>
-                      <th>次分類</th>
+                      <th>
+                        日期<span class="icon_sort"
+                          ><a href="#"><img src="images/icon_sort.svg" alt="排序" /></a
+                        ></span>
+                      </th>
+                      <th>
+                        文號<span class="icon_sort"
+                          ><a href="#"><img src="images/icon_up.svg" alt="向上" /></a
+                        ></span>
+                      </th>
+                      <th>
+                        次分類<span class="icon_sort"
+                          ><a href="#"><img src="images/icon_down.svg" alt="向下" /></a
+                        ></span>
+                      </th>
                       <th>訊息摘要/主旨</th>
                     </tr>
                   </thead>
@@ -244,7 +256,7 @@
                       <td><a href="#">FDA藥字第1041411951號</a></td>
                       <td>藥品臨床試驗</td>
                       <td>
-                        公告「生物相似性單株抗體藥品查驗登記基準」<span class="detailBtn"><a href="#">詳全文</a></span>
+                        公告「生物相似性單株抗體<span class="keyword">關鍵字</span>藥品查驗登記基準」藥品查驗登記基準藥品查驗登記基準藥品<span class="keyword">關鍵字</span>查驗登記基準藥品查驗登記基準<span class="detailBtn"><a href="#">詳全文</a></span>
                       </td>
                     </tr>
                     <tr>
