--- a/mp.htm
+++ b/mp.htm
@@ -69,6 +69,7 @@
                   <!-- <div class="btn_grp">
                             <input name="" type="submit" value="進階搜尋" class="btn" />
                           </div> -->
+                  <div class="explain_text">文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明文字說明</div>
                   <div class="keywordHot">
                     <ul>
                       <li><a href="#">熱門熱門</a></li>
