--- a/cp.htm
+++ b/cp.htm
@@ -142,7 +142,7 @@
             <div class="leftblock_nodemenu">
               <div class="title">藥品</div>
               <ul>
-                <li>
+                <li class="active">
                   <a href="#">藥品臨床試驗</a>
                 </li>
                 <li>
@@ -280,13 +280,13 @@
                 <h3>附件下載</h3>
                 <ul>
                   <li>
-                    <span class="file_name">研習課程報名表（doc, docx）</span>
+                    <span class="file_name"><a href="#">研習課程報名表</a>（doc, docx）</span>
                     <span class="file_doc"><a href="xxxx.doc">doc</a>823.8 KB</span>
                     <span class="file_docx"><a href="xxx.docx">docx</a>823.8 KB</span>
                     <!-- <span class="file_odt"><a href="xxxx.odt">odt</a>823.8 KB</span> -->
                   </li>
                   <li>
-                    <span class="file_name">研習課程報名表（odt格式轉換）</span>
+                    <span class="file_name"><a href="#">研習課程報名表</a>（odt格式轉換）</span>
                     <span class="file_odt"><a href="xxxx.odt">odt</a>823.8 KB</span>
                     <!-- <span class="file_xls"><a href="xxxx.xls">xls</a>823.8 KB</span>
                     <span class="file_xlsx"><a href="xxxx.xlsx">xlsx</a>823.8 KB</span>
@@ -294,13 +294,13 @@
                     <span class="file_ods"><a href="xxxx.ods">ods</a>823.8 KB</span> -->
                   </li>
                   <li>
-                    <span class="file_name">課程內容簡介（PDF）</span>
+                    <span class="file_name"><a href="#">課程內容簡介</a>（PDF）</span>
                     <span class="file_pdf"><a href="xxxx.pdf">pdf</a>823.8 KB</span>
                     <!-- <span class="file_pptx"><a href="xxxx.pptx">pptx</a>823.8 KB，下載 1,489 次</span>
                     <span class="file_odp"><a href="xxxx.odp">odp</a>823.8 KB，下載 1,489 次</span> -->
                   </li>
                   <li>
-                    <span class="file_name">檔案名稱</span>
+                    <span class="file_name"><a href="#">檔案名稱</a></span>
                     <span class="file_pdf"><a href="xxxx.pdf">pdf</a>823.8 KB</span>
                     <span class="file_zip"><a href="xxxx.zip">zip</a>823.8 KB</span>
                     <span class="file_txt"><a href="xxxx.txt">txt</a>823.8 KB</span>
