--- a/cp.htm
+++ b/cp.htm
@@ -280,35 +280,36 @@
                 <h3>附件下載</h3>
                 <ul>
                   <li>
-                    <span class="file_name"><a href="#">研習課程報名表</a>（doc, docx）</span>
-                    <span class="file_doc"><a href="xxxx.doc">doc</a>823.8 KB</span>
-                    <span class="file_docx"><a href="xxx.docx">docx</a>823.8 KB</span>
-                    <!-- <span class="file_odt"><a href="xxxx.odt">odt</a>823.8 KB</span> -->
+                    <div>
+                      <span class="file_name"><a href="#">研習課程報名表</a>（doc, docx）</span>
+                    </div>
+                    <div><span class="file_doc">doc</span><span class="kbtxt">823.8 KB</span></div>
+                    <div><span class="file_docx">docx</span><span class="kbtxt">823.8 KB</span></div>
                   </li>
                   <li>
-                    <span class="file_name"><a href="#">研習課程報名表</a>（odt格式轉換）</span>
-                    <span class="file_odt"><a href="xxxx.odt">odt</a>823.8 KB</span>
-                    <!-- <span class="file_xls"><a href="xxxx.xls">xls</a>823.8 KB</span>
-                    <span class="file_xlsx"><a href="xxxx.xlsx">xlsx</a>823.8 KB</span>
-                    <span class="file_csv"><a href="xxxx.csv">csv</a>823.8 KB</span>
-                    <span class="file_ods"><a href="xxxx.ods">ods</a>823.8 KB</span> -->
+                    <div>
+                      <span class="file_name"><a href="#">研習課程報名表</a>（odt格式轉換）</span>
+                    </div>
+                    <div><span class="file_odt">odt</span><span class="kbtxt">823.8 KB</span></div>
                   </li>
                   <li>
-                    <span class="file_name"><a href="#">課程內容簡介</a>（PDF）</span>
-                    <span class="file_pdf"><a href="xxxx.pdf">pdf</a>823.8 KB</span>
-                    <!-- <span class="file_pptx"><a href="xxxx.pptx">pptx</a>823.8 KB，下載 1,489 次</span>
-                    <span class="file_odp"><a href="xxxx.odp">odp</a>823.8 KB，下載 1,489 次</span> -->
+                    <div>
+                      <span class="file_name"><a href="#">課程內容簡介</a>（PDF）</span>
+                    </div>
+                    <div><span class="file_pdf">pdf</span><span class="kbtxt">22.8 KB</span></div>
                   </li>
                   <li>
-                    <span class="file_name"><a href="#">檔案名稱</a></span>
-                    <span class="file_pdf"><a href="xxxx.pdf">pdf</a>823.8 KB</span>
-                    <span class="file_zip"><a href="xxxx.zip">zip</a>823.8 KB</span>
-                    <span class="file_txt"><a href="xxxx.txt">txt</a>823.8 KB</span>
-                    <span class="file_mov"><a href="xxxx.mov">mov</a>823.8 KB</span>
-                    <span class="file_mp3"><a href="xxxx.mp3">mp3</a>823.8 KB</span>
-                    <span class="file_jpg"><a href="xxxx.jpg">jpg</a>823.8 KB</span>
-                    <span class="file_wmv"><a href="xxxx.wmv">wmv</a>823.8 KB</span>
-                    <span class="file_mp4"><a href="xxxx.mp4">mp4</a>823.8 KB</span>
+                    <div>
+                      <span class="file_name"><a href="#">檔案名稱</a></span>
+                    </div>
+                    <div><span class="file_pdf">pdf</span><span class="kbtxt">22.8 KB</span></div>
+                    <div><span class="file_zip">zip</span><span class="kbtxt">22.8 KB</span></div>
+                    <div><span class="file_txt">txt</span><span class="kbtxt">22.8 KB</span></div>
+                    <div><span class="file_mov">mov</span><span class="kbtxt">22.8 KB</span></div>
+                    <div><span class="file_mp3">mp3</span><span class="kbtxt">22.8 KB</span></div>
+                    <div><span class="file_jpg">jpg</span><span class="kbtxt">22.8 KB</span></div>
+                    <div><span class="file_wmv">wmv</span><span class="kbtxt">22.8 KB</span></div>
+                    <div><span class="file_mp4">mp4</span><span class="kbtxt">22.8 KB</span></div>
                   </li>
                 </ul>
               </div>
@@ -317,8 +318,10 @@
                 <h3>公告影像檔</h3>
                 <ul>
                   <li>
-                    <span class="file_name">1131400002_附件.pdf</span>
-                    <span class="file_pdf"><a href="xxxx.pdf">pdf</a>823.8 KB</span>
+                    <div>
+                      <span class="file_name"><a href="#">檔案名稱</a></span>
+                    </div>
+                    <div><span class="file_pdf">pdf</span><span class="kbtxt">22.8 KB</span></div>
                   </li>
                 </ul>
               </div>
