--- a/cp.htm
+++ b/cp.htm
@@ -283,33 +283,33 @@
                     <div>
                       <span class="file_name"><a href="#">研習課程報名表</a>（doc, docx）</span>
                     </div>
-                    <div><span class="file_doc">doc</span><span class="kbtxt">823.8 KB</span></div>
-                    <div><span class="file_docx">docx</span><span class="kbtxt">823.8 KB</span></div>
+                    <div><span class="file_doc">doc</span><span class="kbtxt">823.8 KB，下載 1,489 次</span></div>
+                    <div><span class="file_docx">docx</span><span class="kbtxt">823.8 KB，下載 1,489 次</span></div>
                   </li>
                   <li>
                     <div>
                       <span class="file_name"><a href="#">研習課程報名表</a>（odt格式轉換）</span>
                     </div>
-                    <div><span class="file_odt">odt</span><span class="kbtxt">823.8 KB</span></div>
+                    <div><span class="file_odt">odt</span><span class="kbtxt">823.8 KB，下載 1,489 次</span></div>
                   </li>
                   <li>
                     <div>
                       <span class="file_name"><a href="#">課程內容簡介</a>（PDF）</span>
                     </div>
-                    <div><span class="file_pdf">pdf</span><span class="kbtxt">22.8 KB</span></div>
+                    <div><span class="file_pdf">pdf</span><span class="kbtxt">22.8 KB，下載 1,489 次</span></div>
                   </li>
                   <li>
                     <div>
                       <span class="file_name"><a href="#">檔案名稱</a></span>
                     </div>
-                    <div><span class="file_pdf">pdf</span><span class="kbtxt">22.8 KB</span></div>
-                    <div><span class="file_zip">zip</span><span class="kbtxt">22.8 KB</span></div>
-                    <div><span class="file_txt">txt</span><span class="kbtxt">22.8 KB</span></div>
-                    <div><span class="file_mov">mov</span><span class="kbtxt">22.8 KB</span></div>
-                    <div><span class="file_mp3">mp3</span><span class="kbtxt">22.8 KB</span></div>
-                    <div><span class="file_jpg">jpg</span><span class="kbtxt">22.8 KB</span></div>
-                    <div><span class="file_wmv">wmv</span><span class="kbtxt">22.8 KB</span></div>
-                    <div><span class="file_mp4">mp4</span><span class="kbtxt">22.8 KB</span></div>
+                    <div><span class="file_pdf">pdf</span><span class="kbtxt">22.8 KB，下載 1,489 次</span></div>
+                    <div><span class="file_zip">zip</span><span class="kbtxt">22.8 KB，下載 1,489 次</span></div>
+                    <div><span class="file_txt">txt</span><span class="kbtxt">22.8 KB，下載 1,489 次</span></div>
+                    <div><span class="file_mov">mov</span><span class="kbtxt">22.8 KB，下載 1,489 次</span></div>
+                    <div><span class="file_mp3">mp3</span><span class="kbtxt">22.8 KB，下載 1,489 次</span></div>
+                    <div><span class="file_jpg">jpg</span><span class="kbtxt">22.8 KB，下載 1,489 次</span></div>
+                    <div><span class="file_wmv">wmv</span><span class="kbtxt">22.8 KB，下載 1,489 次</span></div>
+                    <div><span class="file_mp4">mp4</span><span class="kbtxt">22.8 KB，下載 1,489 次</span></div>
                   </li>
                 </ul>
               </div>
@@ -321,7 +321,7 @@
                     <div>
                       <span class="file_name"><a href="#">檔案名稱</a></span>
                     </div>
-                    <div><span class="file_pdf">pdf</span><span class="kbtxt">22.8 KB</span></div>
+                    <div><span class="file_pdf">pdf</span><span class="kbtxt">22.8 KB，下載 1,489 次</span></div>
                   </li>
                 </ul>
               </div>
